2007/11/22
	9.Added CkwsPlusPCARdmBuilder class. Derives from any diffusing
	roadmap builder class and implements a principal component
	analysis to speed up the diffusion process. Needs lapack installed.

2007/11/14
	8.Remove unused classes kwsPlusRoadmap and kwsPlusDrawRdmBuilderDelegate
	7.Minor Changes 
	6.Merge with git+ssh://softs.laas.fr/git/jrl/kwsPlus

2007/11/06
	5. Correct the reeds&sheppDirectPath Class :
	      - is now derivated from kwsPlusDirectPath
	      - you can acess to uStart and uEnd parameters which are configurated with extractTo and extractFrom
	      - when you get the RSvectorPartition is now taking count of the uStart and uEnd extracting parameters


2007/10/22
	4. Added a class to test whether a configuration constraint is continuous and is a projection.	
	
2007/10/17
	3. Reorganization of documentation.
	2. Added class CkwsPlusDirectPath that manages extraction and reverse of direct paths.
	
2007/10/16
	1. Added a class in unitTesting to test whether a configuration constraint is a projection.
	
2007/10/10
	kwsPlus release 1.1
	
2007/10/09
	1. Correct a bug in  findRsCurveNumInVector() : 
	   - put an Epsilon for the test else there is a bug when u ~= val 
	
2007/09/29
	1. Added visibility algorithm.
	2. Added a roadmap builder delegate to display the roadmap.
	3. Modified construction of CkwsPlusRoadmap.
	
2007/09/16
	Completed the implementation of the Reeds&Shepp Curve
		  - MaxAbsoluteDerivative 
		  - Reduce the option RS_ALL type of curve

2007/07/13
	kwsPlus release 1.0
	
2007/05/02
	Added methods and attributes to keep track of extration and reversion of KineoWorks direct paths.
	
2007/04/27
	1. Class CkwsPlusRoadmap now inherits from CkppKCDAssembly instead of CkppKCDPolyhedron, in order to allow roadmap building on
	run-time.
	2. Added a method "lastEdge" to this class. To use with a roadmap builder delegate and a progress delegate for a "real-time" display

2007/04/26